<resources>
    <string name="app_name">MimiCare</string>
    <string name="devices">BluetoothLE Devices</string>
    <string name="user">User</string>
    <string name="walk">Walk</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="assignment">Assignment</string>
    <string name="location_permission_title">Location permission required</string>
    <string name="location_permission_message">This app does not use location information, but scanning for Bluetooth LE devices requires this permission</string>

    <string name="location_denied_title">Location permission denied</string>
    <string name="location_denied_message">As location permission has not been granted, this app cannot scan for Bluetooth LE devices.</string>
    <string name="pairing_request">PAIRING requested\n-> Perform pairing steps. Connect again</string>
    <string name="data">Data</string>
    <string name="record">Please walk 10 steps\nto calibrate</string>
    <string name="test">Test</string>
    <string name="default_name">Your Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="setting">Setting</string>
    <string name="create">Create account</string>
    <string name="login">Sign In</string>
    <string name="register">Register</string>
    <string name="step">%d out of %d steps done</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">Date of Birth</string>
    <string name="home">Home</string>
    <string name="date">Due in %s</string>
    <string name="legendLow">Low\nPressure</string>
    <string name="legendHigh">High\nPressure</string>

</resources>
