<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_walk"
        android:icon="@drawable/ic_walk"
        android:title="@string/walk"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_goal"
        android:icon="@drawable/ic_goal"
        android:title="@string/assignment"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/item_data"
        android:icon="@drawable/ic_pie_chart_black_24dp"
        android:title="@string/data"
        app:showAsAction="ifRoom"/>
</menu>